test/Fail/ConflictingRelevance.err
ConflictingRelevance.agda:4.34: error: [ParseError]
)<ERROR>  → A

-- Should fail.  (Curren...
